fix: white rectangles centered

--- a/src/componentes/background/background.scss
+++ b/src/componentes/background/background.scss
@@ -1,8 +1,11 @@
 @import '../../assets/global.scss';
 
 .gradient-background {
-  min-height: 100vh;
+ min-height: 100vh;
   height: 40.7rem;
   min-width: 80rem;
   background: linear-gradient(to bottom,$footer-light-green 50%, $background-green-dark 50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
