--- a/src/componentes/reusable/white_container/white_container.scss
+++ b/src/componentes/reusable/white_container/white_container.scss
@@ -6,8 +6,7 @@
     height: 36rem;
     width: 70rem;
     margin: auto;
-    position: absolute;
-    top: 2.2rem;
+    position: relative;
     left: 0;
     right: 0;
     border-radius: 0.75rem;
@@ -23,8 +22,7 @@
     height: 37rem;
     width: 70rem;
     margin: auto;
-    position: absolute;
-    top: 2rem;
+    position: relative;
     left: 0;
     right: 0;
     border-radius: 0.75rem;
@@ -70,8 +68,7 @@
     height: 30rem;
     width: 37rem;
     margin: auto;
-    position: absolute;
-    top: 5rem;
+    position: relative;
     left: 0;
     right: 0;
     border-radius: 1.3rem;
