fix: add crop button position

--- a/src/componentes/reusable/boton/button.scss
+++ b/src/componentes/reusable/boton/button.scss
@@ -12,6 +12,11 @@
     cursor: pointer;
     font-size: 20px;
     font-family: "Inter", sans-serif;
+    
+  }
+
+  .mas-button{
+    width: 90%;
   }
 
   .green-button:hover{
