--- a/src/componentes/infoCampo/infoCampo.scss
+++ b/src/componentes/infoCampo/infoCampo.scss
@@ -301,3 +301,27 @@
   text-align: left;
   color: black;
 }
+
+
+.mapa-card{
+    align-content: center;
+    margin: 1rem 1rem;
+    padding: 1rem;
+    width: 90rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+  border-radius: 0.5rem;
+}
+
+.campo-mapa-cultivo {
+  //background-color: $verde-clarito;
+  text-align: center;
+  //border: 1px solid rgb(202, 202, 202);
+  border-radius: 0.5rem;
+  width: 100%;
+  height: 30rem;
+  //margin-left: 2%;
+  padding: 1rem;
+}
