fix: minor updates

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -22,6 +22,7 @@ $main-dark-green: #124a2f;
 $background-green-dark:#81b483;
 $footer-light-green:rgb(213, 238, 213);
 
+$light-gray: #F5F5F5;
 
 //degradado 
 $verde-claro-iniciar-sesion: #CCFCCB;
