--- a/src/componentes/infoCampo/infoCampo.scss
+++ b/src/componentes/infoCampo/infoCampo.scss
@@ -36,7 +36,7 @@
 }
 
 .gray-space {
-  background-color: $footer-light-green;
+  background-color: $light-gray;
   min-width: 100%;
   min-height: 90vh; /* Asegura que al menos ocupe toda la altura de la pantalla */
   position: absolute; /* Cambia a "absolute" para que no bloquee las barras de desplazamiento */
