--- a/src/componentes/verCultivos/verCultivos.scss
+++ b/src/componentes/verCultivos/verCultivos.scss
@@ -45,9 +45,10 @@
 
 .titulo-fachero-facherito {
   width: 100%;
-  margin: 1rem 0% 0% 0%;
+  //margin: 1rem 0% 0% 0%;
   justify-content: center;
   font-family: 'Inter', sans-serif;
   font-size: 2.5rem;
   font-weight: normal;
+  color: $gris-titulo;
 }
