--- a/src/componentes/reusable/header/header.scss
+++ b/src/componentes/reusable/header/header.scss
@@ -4,7 +4,7 @@
     width: 100%;
     margin-top: 0%;
     @include alignHorizontally;
-    position: sticky !important;
+    // position: sticky !important;
     display: block;
 }
 
