fix: css in editar/agregar inputs

--- a/src/componentes/reusable/mapContainer/mapContainer.scss
+++ b/src/componentes/reusable/mapContainer/mapContainer.scss
@@ -30,7 +30,7 @@
   font-size: 2vh;
   display: flex;
   align-items: baseline;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 .agregar-campo-inputs{
