--- a/src/componentes/reusable/header/header.scss
+++ b/src/componentes/reusable/header/header.scss
@@ -4,6 +4,8 @@
     width: 100%;
     margin-top: 0%;
     @include alignHorizontally;
+    // position: sticky !important;
+    display: block;
 }
 
 
