--- a/src/componentes/reusable/loader/loader.scss
+++ b/src/componentes/reusable/loader/loader.scss
@@ -19,8 +19,8 @@
   width: 10rem;
   height: 10rem;
   animation: spinner 3s linear infinite;
-  top: 50%;
-  left: 50%
+  top: 25%;
+  position: relative;
 }
 
 .flower-loader{
