--- a/src/componentes/reusable/input_box/input_box.scss
+++ b/src/componentes/reusable/input_box/input_box.scss
@@ -22,6 +22,8 @@
     min-width: 1vw;
     width: min-content;
     align-items: end;
+    margin-bottom: 0;
+    font-size: 2vh;
   }
 .sub-rectangle-red {
   height: 3rem;
