--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -55,3 +55,11 @@ $light-gray-dropdown:#ced4da;
     align-items: center;
     justify-content: space-evenly;
 }
+
+.loader-container{
+  width: 100% !important;
+  height: 100% !important;
+  top: 50% !important; 
+  position: relative !important; 
+  margin-top: 14% !important;
+}
