--- a/src/componentes/home/home.scss
+++ b/src/componentes/home/home.scss
@@ -6,6 +6,8 @@
   grid-template-columns: repeat(auto-fill, minmax(13.2rem, 1fr));
   grid-gap: 1.2rem;
   margin-top: 1rem;
+  margin-left: 1rem; /* Margen a la izquierda */
+  margin-right: 1rem;
 }
 
 .rounded-image {
@@ -21,7 +23,7 @@
   height: 15rem;
   width: 13.2rem;
   border-radius: 0.5rem;
-  background-color: $gris-tarjetas-fondo-infoCampos; /* Add this line to set the background color to red */
+  background-color: WHITE; /* Add this line to set the background color to red */
 }
 
 .image-wrapper img {
