--- a/src/componentes/editarPerfil/editarPerfil.scss
+++ b/src/componentes/editarPerfil/editarPerfil.scss
@@ -21,6 +21,13 @@
     background-color: $footer-light-green; 
   }
 
+  .fondoGris{
+    min-height: 100vh;
+    height: 40rem;
+    min-width: 80rem;
+    background-color: $light-gray; 
+  }
+
 .flexbox-container4{
 	//display: -ms-flex;
 	//display: -webkit-flex;
