--- a/src/componentes/reusable/popup/popup.scss
+++ b/src/componentes/reusable/popup/popup.scss
@@ -1,3 +1,4 @@
+@import "../../../assets/global.scss";
 
 .popup {
     position: fixed;
@@ -13,12 +14,15 @@
   
   .popup-content {
     background-color: white;
-    padding: 20px;
-    border-radius: 5px;
+    padding: 1.5rem;
+    border-radius: 0.5rem;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
+    font-family: "Inter", sans-serif;
+    font-size: 1.5rem; 
+    color:$gris-texto;
   }
   
-  .popup button {
-    margin-top: 10px;
+  .popup-button{
+    font-size: 1rem;
   }
