--- a/src/componentes/reusable/mapContainer/mapContainer.scss
+++ b/src/componentes/reusable/mapContainer/mapContainer.scss
@@ -150,19 +150,24 @@
 .select{
   height: 3.2rem;
   width: 10rem;
-  background-color: #F1FFFA;
+  background-color: $verde-clarito;
   margin-left: 1rem;
   margin-right: 1rem;
   margin-bottom: 1rem;
   border-radius: 10px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
-  border: 1px #8B8B8B;
+  border: 1px $inputbox-border-gray;
   color: $gris-titulo;
   font-size: 2vh;
   font-family: "Inter", sans-serif;
-  border-color: #c1c1c1;
+  border-color: $inputbox-border2-gray;
   border-style: solid ;
   padding-left: 2%;
+}
+
+.disabled{
+  background-color: $inputbox-border2-gray !important;
+  color:  $gris-titulo;
 }
 
 
